trunk/Archive2/e4/650aac06239371/output
main.cpp: In function 'int main()':
main.cpp:23:11: error: could not convert '(RecAbbo*)(& Abbo)' from 'RecAbbo*' to 'RecAbbo'
  safe(Abbo);
           ^
